# car-wash-vlm-client

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  ruff.toml  run_inference.py
guideline/: guideline_v1_transformed.csv  guideline_v2.csv  guideline_v4.csv
guideline/car_parts/: car_parts_v1.csv  car_parts_v2.csv  car_parts_v3.csv
guideline/prompts/: prompt_v4.1.txt
guideline/wash_guideline/: guideline_v1.csv  guideline_v2.csv  guideline_v3.csv  guideline_v4.1.csv  guideline_v4.csv  guideline_v5.csv  guideline_v6.1.csv  guideline_v6.csv
prompts/: car_contamination_classification_prompt_v1.txt  car_contamination_classification_prompt_v2.txt  car_contamination_classification_prompt_v3.txt  car_contamination_classification_prompt_v4.txt  car_dirtiness_v1.txt  prompt-test.txt  prompt_v1.txt  prompt_v2.txt  prompt_v3.5.txt  prompt_v3.txt  prompt_v4.txt  prompt_v5.txt  prompt_v6.1.txt  prompt_v6.txt
prompts/templates/: contamination_classification_v1.j2
src/: __init__.py  batch_inference.py  cli.py  client.py  exceptions.py
src/api/: __init__.py  client.py
src/dashboard/: app.py  batch_app.py
src/inference/: __init__.py  batch.py  batch_output_parser.py  compare.py  gemini_batch.py  pricing.py
src/monitoring/: __init__.py  langfuse_client.py
src/prompts/: __init__.py  generator.py
src/utils/: __init__.py  filter_unknown_contaminations.py  merge_csv_and_download_images.py
utils/: __init__.py  batch_inference.py  generate_prompt.py  merge_csv_and_download_images.py
