[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "car-wash-vlm-client"
version = "0.1.0"
description = "Python client for Vision Language Model (VLM) API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
carwash = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
]

[tool.setuptools]
packages = ["src", "src.api", "src.inference", "src.prompts", "src.utils"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["car-wash-vlm-client"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
